# xlib_egl_test_project

./: .gitignore  CMakeLists.txt  README.md  main.cpp  shell.nix
